--- a/src/CSS/SignupCard.css
+++ b/src/CSS/SignupCard.css
@@ -30,7 +30,6 @@
     max-height: 16.3rem;
     max-width: 23rem;
     padding-bottom: 3rem;
-    margin-right: 1rem;
 }
 .signupcard_video{
     height: 14rem;
@@ -39,16 +38,17 @@
 }
 
 .signupcard_watch_video{
-    margin-top: 1rem;
-    height: 8rem;
+    margin-top: 1.3rem;
+    height: 8.3rem;
     width: 14rem;
-    margin-right: 4.2rem;
+    margin-right: 1.2rem;
 }
 
 .download_gif{
     position: absolute;
+    gap: 1rem;
     z-index: 2;
-    left: 0.5rem;
+    left: 1.4rem;
     top: 10.8rem;
     display: flex;
     justify-content: space-between;
@@ -61,13 +61,12 @@
 
 .download_img{
     border-radius: 50%;
-    margin-left: 4.1rem;
     max-height: 4rem;
 }
 
 .download_gif p{
     margin: auto;
-    margin-left: 1rem;
+    margin-left: 0rem;
 }
 .starnger_poster{
     max-height: 3.5rem;
@@ -80,24 +79,29 @@
     margin: auto;
     z-index: 1;
     height: 23rem;
-    width: 26rem;
+    width: 23rem;
 }
 
 
 
 @media screen and (min-width: 1140px){
     .download_gif{
-        top: 16.2rem;
+        top: 14.8rem;
         left: 4.5rem;
+        gap: 1.1rem;
     }
     .signupcard_img{
-        max-width: 32rem;
-        max-height: 39rem;
+        max-width: 28rem;
+        max-height: 35rem;
+    }
+
+.download_img{
+    margin-left: 0;
 }
 .signupcard_watch_video{
     height: 13rem;
-    width: 20rem;
-    margin-left: 2rem;
+    width: 18rem;
+    margin-left: 5rem;
 }
     .signupcard{
         display: grid;
@@ -127,13 +131,28 @@
         font-size: 1.5rem;
     }
 
+    .download_gif p{
+        text-align: justify;
+    }
+    .download_gif p span{
+        padding-left: 0 !important;
+    }
+
     .signupcard_video{
-        height: 19rem;
-        width: 24.8rem;
+        height: 16rem;
+        width: 27.6rem;
     }
 }
 
 @media (max-width:1140px) and (min-width:750px ){
+
+    .download_gif{
+        left: 2rem;
+        gap: 0.2rem;
+    }
+    .download_img{
+        margin: 0;
+    }
     
     .signupcard{
         display: grid;
@@ -155,6 +174,11 @@
     }
     .content{
         font-size: 1.2rem;
+    }
+    .signupcard_watch_video{
+        height: 8.5rem;
+        margin-top: 1.2rem;
+        margin-left: 2.4rem;
     }
 
 }
